--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
           <h1>Rap Surge</h1>
           <h2 id="ontherise">New, up and coming rappers.</h2>
         </div>
-        <ul class="flex-container flex-end">
-          <li class="flex-item"><a href="#">home</a></li>
-          <li class="flex-item"><a target="_blank"href="https://www.spotify.com/us/">music</a></li>
-          <li class="flex-item"><a href="alumni.html">alumni</a></li>
-        </ul>
+        <div class="routes">
+          <ul class="flex-container flex-end">
+            <li class="flex-item"><a href="#">home</a></li>
+            <li class="flex-item"><a target="_blank"href="https://www.spotify.com/us/">music</a></li>
+            <li class="flex-item"><a href="alumni.html">alumni</a></li>
+          </ul>
+        </div>
       </div>
     </header>
     <section>
